# AcademicRiskPredictor

./: README.md  Student at Risk Assessment system.csv  Student_at_Risk_Assessment.ipynb  Student_at_risk_EDA_Preprocesing.ipynb  Student_at_risk_Predictor_Model.ipynb  category_mapping.json  requirements.txt
AcademicRiskPredictor/: api.py  app.py  main.py  pyproject.toml  setup.py
AcademicRiskPredictor/data/: dataset.csv
AcademicRiskPredictor/db/: __init__.py  config.py  init_db.py  models.py
AcademicRiskPredictor/models/: Decision_Tree.pkl  Logistic_Regression.pkl  SVM.pkl
AcademicRiskPredictor/plots/: model_metrics.csv
AcademicRiskPredictor/scripts/: eda.py  predict.py  train.py
AcademicRiskPredictor/src/: __init__.py  data_processing.py  model_evaluation.py
data/: dataset.csv  stu_risk_data_encoded.csv
